--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.5.0",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^5.1.2",
+    "react-redux-firebase": "^2.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-firestore": "^0.11.0",
+    "sweetalert2": "^9.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
